# LangSpace

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  quick_start.rst  requirements.txt
docs/langspace/: langspace.metrics.rst  langspace.models.rst  langspace.ops.rst  langspace.probe.arithmetic.rst  langspace.probe.cluster_vis.rst  langspace.probe.defmod.rst  langspace.probe.disentanglement.rst  langspace.probe.interpolation.rst  langspace.probe.lingprop.rst  langspace.probe.rst  langspace.probe.sts.rst  langspace.probe.traversal.rst  langspace.rst  modules.rst
examples/: definition_vae.py  explanations.txt
langspace/metrics/: __init__.py  disentanglement.py  interpolation.py
langspace/models/: __init__.py
langspace/ops/: arithmetic.py  interpolation.py  traversal.py
langspace/probe/: __init__.py  base.py
langspace/probe/arithmetic/: __init__.py
langspace/probe/cluster_vis/: __init__.py  methods.py
langspace/probe/disentanglement/: __init__.py
langspace/probe/interpolation/: __init__.py
langspace/probe/lingprop/: __init__.py
langspace/probe/sts/: __init__.py
langspace/probe/traversal/: __init__.py
